src/test/deca/context/valid/oracle/while_without_operation.deca
{
    while(5<=9){
        ;;;
    }
}