src/test/deca/context/invalid/oracle/use_var_not_decl_with_l_right.deca
{
    bool x;
    x = 2 < y;
}